--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "a63bab28b1e4506d",
+        "id": "3e66cd3a626a7a13",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "README.md",
-            "mode": "source"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -39,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#算法",
+                "query": "tag:#JavaScript",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +82,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a63bab28b1e4506d",
+  "active": "3e66cd3a626a7a13",
   "lastOpenFiles": [
-    "未命名.md",
-    "README.md",
-    "TypeScript 编码规范.md",
-    "100道面试题.md",
-    "Code Review 摘要事项.md",
+    "浏览器知识点.md",
+    "网络与缓存.md",
     "JavaScript 中的数据结构.md",
-    "CommonJs 是如何导致打包体积增大_摘要.md",
+    "webpack.md",
+    "Vue.md",
     "LeetCode 记录.md",
-    "v2-6a8a37d7f089fe690e70177c6acda6f5_720w.jpg.md",
-    "medias/webp.md"
+    "Code Review 摘要事项.md",
+    "实现ES6+ API.md",
+    "面经.md",
+    "100道面试题.md"
   ]
 }
