--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,11 @@
         "id": "3e66cd3a626a7a13",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Vue.md",
+            "mode": "preview"
+          }
         }
       }
     ],
@@ -65,6 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Vue.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,15 +88,15 @@
   },
   "active": "3e66cd3a626a7a13",
   "lastOpenFiles": [
+    "Vue.md",
     "浏览器知识点.md",
+    "JavaScript.md",
     "网络与缓存.md",
     "JavaScript 中的数据结构.md",
     "webpack.md",
-    "Vue.md",
     "LeetCode 记录.md",
     "Code Review 摘要事项.md",
     "实现ES6+ API.md",
-    "面经.md",
-    "100道面试题.md"
+    "面经.md"
   ]
 }
