--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "3e66cd3a626a7a13",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Vue.md",
-            "mode": "preview"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Vue.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
