--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,11 @@
         "id": "808a1cc9f68d5b8a",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "手写实现Promise.md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -65,6 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "手写实现Promise.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,15 +88,15 @@
   },
   "active": "808a1cc9f68d5b8a",
   "lastOpenFiles": [
+    "手写实现Promise.md",
+    "实现ES6+ API.md",
+    "JavaScript.md",
+    "JS继承.md",
+    "JS常见数据类型的判断方法.md",
+    "JavaScript执行上下文.md",
     "Promise.md",
     "promise执行顺序.md",
-    "手写实现Promise.md",
     "浏览器.md",
-    "内存管理.md",
-    "EventLoop.md",
-    "EventLoop执行.md",
-    "小程序.md",
-    "面经.md",
-    "JavaScript.md"
+    "内存管理.md"
   ]
 }
