--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "3be79efd9874e642",
+        "id": "808a1cc9f68d5b8a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
             "file": "HTTP 状态码.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#JavaScript",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "3be79efd9874e642",
+  "active": "808a1cc9f68d5b8a",
   "lastOpenFiles": [
     "HTTP 状态码.md",
-    "JS作用域和作用域链.md",
-    "实现ES6+ API.md",
-    "JS继承.md",
-    "JavaScript.md",
-    "索引.md",
-    "new title.md",
-    "面经.md",
+    "浏览器缓存.md",
+    "HTTP缓存.md",
     "网络与缓存.md",
-    "HTTPS 知识.md"
+    "SYN cookie.md",
+    "手写实现Promise.md",
+    "实现ES6+ API.md",
+    "JavaScript.md",
+    "JS继承.md",
+    "JS常见数据类型的判断方法.md"
   ]
 }
