--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "808a1cc9f68d5b8a",
+        "id": "243d82f276888d7d",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "HTTP 状态码.md",
-            "mode": "source"
+            "file": "实现ES6+ API.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,13 +68,13 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "HTTP 状态码.md",
+                "file": "实现ES6+ API.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
-                "backlinkCollapsed": true,
+                "backlinkCollapsed": false,
                 "unlinkedCollapsed": true
               }
             }
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "808a1cc9f68d5b8a",
+  "active": "243d82f276888d7d",
   "lastOpenFiles": [
+    "实现ES6+ API.md",
     "HTTP 状态码.md",
-    "浏览器缓存.md",
+    "HTTP 请求方式.md",
     "HTTP缓存.md",
+    "浏览器缓存.md",
+    "100道面试题.md",
+    "浏览器.md",
     "网络与缓存.md",
     "SYN cookie.md",
-    "手写实现Promise.md",
-    "实现ES6+ API.md",
-    "JavaScript.md",
-    "JS继承.md",
-    "JS常见数据类型的判断方法.md"
+    "手写实现Promise.md"
   ]
 }
