--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "243d82f276888d7d",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "前端安全攻击.md",
-            "mode": "preview"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端安全攻击.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +84,15 @@
   },
   "active": "243d82f276888d7d",
   "lastOpenFiles": [
-    "前端安全攻击.md",
-    "函数, 函数参数arguments.md",
-    "Map, Set, weakMap, Symbol.md",
-    "new title.md",
-    "EventLoop.md",
-    "HTTPS 知识.md",
-    "Proxy, defineProperty.md",
-    "JS常见数据类型的判断方法.md",
-    "实现call, apply, bind.md",
-    "JavaScript执行上下文.md"
+    "跨域.md",
+    "回流与重绘.md",
+    "浏览器渲染.md",
+    "浏览器渲染流程.md",
+    "chrome性能观察.md",
+    "浏览器.md",
+    "chrome的性能观察.md",
+    "浏览器缓存.md",
+    "JavaScript.md",
+    "内存管理.md"
   ]
 }
