--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,37 @@
     "type": "split",
     "children": [
       {
-        "id": "116e99e23d439cc8",
+        "id": "8d21c1eb6dc1e628",
         "type": "leaf",
         "state": {
-          "type": "markdown",
+          "type": "localgraph",
           "state": {
-            "file": "IndexedDB.md",
-            "mode": "source"
+            "file": "面经.md",
+            "options": {
+              "collapse-filter": true,
+              "search": "",
+              "localJumps": 1,
+              "localBacklinks": true,
+              "localForelinks": true,
+              "localInterlinks": false,
+              "showTags": false,
+              "showAttachments": false,
+              "hideUnresolved": false,
+              "collapse-color-groups": true,
+              "colorGroups": [],
+              "collapse-display": true,
+              "showArrow": false,
+              "textFadeMultiplier": 0,
+              "nodeSizeMultiplier": 1,
+              "lineSizeMultiplier": 1,
+              "collapse-forces": true,
+              "centerStrength": 0.518713248970312,
+              "repelStrength": 10,
+              "linkStrength": 1,
+              "linkDistance": 250,
+              "scale": 0.6554983534946917,
+              "close": false
+            }
           }
         }
       }
@@ -68,7 +92,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "IndexedDB.md",
+                "file": "面经.md",
                 "collapseAll": false,
                 "extraContext": true,
                 "sortOrder": "alphabetical",
@@ -86,17 +110,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "116e99e23d439cc8",
+  "active": "8d21c1eb6dc1e628",
   "lastOpenFiles": [
-    "IndexedDB.md",
-    "浏览器存储.md",
-    "网络与缓存.md",
-    "100道面试题.md",
+    "面经.md",
+    "手写JSONP.md",
+    "跨域.md",
+    "笔试题.md",
     "浏览器.md",
-    "浏览器渲染.md",
-    "缓存运用.md",
-    "浏览器缓存.md",
-    "webpack.md",
-    "Etag.md"
+    "控制前端最大并发量.md",
+    "函数柯里化.md",
+    "防抖&节流.md",
+    "防抖/防抖&节流.md",
+    "防抖/节流.md"
   ]
 }
