--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Loader和Plugin.md",
-            "mode": "source"
+            "file": "babel.md",
+            "mode": "preview"
           }
         }
       }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "XSS",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Loader和Plugin.md",
+                "file": "babel.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +87,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Loader和Plugin.md",
+                "file": "babel.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -99,7 +99,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Loader和Plugin.md"
+                "file": "babel.md"
               }
             }
           }
@@ -112,15 +112,15 @@
   },
   "active": "eb1e9216c3756b2e",
   "lastOpenFiles": [
+    "babel.md",
+    "前端工程化.md",
+    "JSBridge.md",
+    "编写 webpack loader.md",
     "Loader和Plugin.md",
     "webpack.md",
     "webpack loader机制.md",
     "webpack组成部分.md",
     "数组扁平化.md",
-    "数组去重.md",
-    "new 运算符.md",
-    "编程题.md",
-    "浏览器渲染.md",
-    "浏览器渲染流程.md"
+    "数组去重.md"
   ]
 }
